Avance sur la prod

--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,8 @@
                         "index": "src/index.html",
                         "browser": "src/main.ts",
                         "polyfills": [
-                            "zone.js"
+                          "zone.js",
+                          "@angular/localize/init"
                         ],
                         "tsConfig": "tsconfig.app.json",
                         "inlineStyleLanguage": "scss",
@@ -107,8 +108,9 @@
                     "builder": "@angular-devkit/build-angular:karma",
                     "options": {
                         "polyfills": [
-                            "zone.js",
-                            "zone.js/testing"
+                          "zone.js",
+                          "zone.js/testing",
+                          "@angular/localize/init"
                         ],
                         "tsConfig": "tsconfig.spec.json",
                         "inlineStyleLanguage": "scss",
