--- a/angular.json
+++ b/angular.json
@@ -58,12 +58,9 @@
                             }
                         ],
                         "styles": [
-                            "src/styles.scss",
-                            "node_modules/bootstrap/dist/css/bootstrap.css"
+                            "src/styles.scss"
                         ],
-                        "scripts": [
-                            "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-                        ]
+                        "scripts": []
                     },
                     "configurations": {
                         "production": {
